--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: book-ecommerce
   datasource:
     url: jdbc:mysql://localhost:3306/bookstore?serverTimezone=UTC
-    username:
-    password:
+    username: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -13,8 +13,23 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 server:
   port: 6868
 
 jwt:
-  secret-key:
+  secret-key: 
+
+app:
+  reset-password:
+    url: http://localhost:3000/reset-password?token=
